add border radius to the container

--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@ body {
 }
 
 .container {
-  padding: 32px;
+  padding: 48px 32px;
   background-color: #303036;
   max-width: 400px;
   margin: 100px auto;
   box-sizing: border-box;
   box-shadow: 3px 10px 16px 0px rgba(48, 48, 54, 0.34);
+  border-radius: 35px;
 }
 
 header {
