fix some margin and border radius

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   padding: 48px 32px;
   background-color: #303036;
   max-width: 400px;
-  margin: 100px auto;
+  margin: 60px auto;
   box-sizing: border-box;
   box-shadow: 3px 10px 16px 0px rgba(48, 48, 54, 0.34);
   border-radius: 35px;
@@ -17,7 +17,7 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 8px;
+  margin-bottom: 40px;
 }
 
 .btn {
@@ -43,7 +43,7 @@ header {
 .avatar {
   color: #f1f2f7;
   text-align: center;
-  margin-bottom: 8px;
+  margin-bottom: 40px;
 }
 
 .image-container {
@@ -57,11 +57,17 @@ header {
 .btn-link {
   padding: 24px;
   margin: auto;
-  margin-bottom: 16px;
-  width: 80%;
-  border-radius: 5px;
+  margin-bottom: 24px;
+  width: 90%;
+  border-radius: 15px;
 }
 
 .link {
-  padding-bottom: 64px;
+  padding-bottom: 40px;
+}
+
+footer {
+  text-align: center;
+  font-size: small;
+  color: #f1f2f7;
 }
